# Navy-Sysytem

./: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c
ui/fonts/: ui_font_CPU.c  ui_font_Font1.c  ui_font_MHz.c  ui_font_setting.c  ui_font_value.c  ui_font_volume.c  ui_font_waktu.c
ui/images/: ui_img_1015138501.c  ui_img_111514558.c  ui_img_154043135.c  ui_img_1693904590.c  ui_img_1738235521.c  ui_img_1930036399.c  ui_img_2126526304.c  ui_img_388315622.c  ui_img_430847109.c  ui_img_55024288.c  ui_img_650324235.c  ui_img_824966301.c  ui_img_brightness_png.c  ui_img_button_1_png.c  ui_img_button_2_png.c  ui_img_button_3_png.c  ui_img_button_4_png.c  ui_img_button_5_png.c  ui_img_button_6_png.c  ui_img_button_7_png.c  ui_img_button_about_png.c  ui_img_button_cic_room_call_png.c  ui_img_button_cic_room_home_png.c  ui_img_button_ecr_ka_call_png.c  ui_img_button_ecr_ka_incall_png.c  ui_img_button_ecr_ki_call_png.c  ui_img_button_ecr_ki_incall_png.c  ui_img_button_kom_anjgan_call_png.c  ui_img_button_kom_anjgan_png.c  ui_img_button_palaksa_call_png.c  (+63 more)
ui_dev/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.h
ui_dev/fonts/: ui_font_about.c  ui_font_pabx.c  ui_font_roboto_medium.c
ui_dev/images/: ui_img_1200060910.c  ui_img_1559931635.c  ui_img_button_14_png.c  ui_img_button_cic_room_incall_png.c  ui_img_button_kom_anjgan_incall_png.c  ui_img_button_palaksa_incall_png.c  ui_img_group_button_png.c  ui_img_lucide_server_png.c  ui_img_personal_buttonn_png.c
ui_dev/screens/: ui_PERSONAL_INCALL.c
(+11 files in other folders)
